# python-project-50

./: .python-version  README.md  main.py  makefile  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: gendiff.py  generate_diff.py  main.py
gendiff/formatters/: helper.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  generate_diff.py
gendiff/scripts/formatters/: helper.py  plain.py  stylish.py
tests/: test_gendiff.py  test_getdiff.py
tests/fixtures/: diff_file1_file2_json.txt  diff_file3_file4_json.txt  file3.yml  file4.yml  file7.yml  file8.yml
